// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/File Multi Upload 1`] = `
Array [
  <div
    className="relative space-y-2"
  >
    <label
      className="inline-block uppercase text-bold-body-300"
      data-testid="txt"
      htmlFor=":rk:"
    >
      Input Label 
    </label>
    <p
      className="text-light-body-300 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Input description",
        }
      }
      data-testid="txt"
      id=":rk:-description"
    />
    <input
      accept="image/png, image/jpeg"
      hidden={true}
      id=":rk:"
      onChange={[Function]}
      type="file"
    />
    <div
      className="relative flex h-[129px] w-full items-center justify-center rounded-lg cursor-pointer border-light"
      onClick={[Function]}
    >
      <div
        className="flex items-center"
      >
        <div
          style={
            Object {
              "height": 19,
              "width": 30,
            }
          }
        />
        <p
          className="ml-3 text-heading-400"
          data-testid="txt"
        >
          Upload File (File formats: PNG, JPEG)
        </p>
      </div>
    </div>
  </div>,
  <div
    className="mt-8 flex flex-col items-center justify-center gap-8"
  />,
]
`;

exports[`Storyshots Components/Elements/Inputs/File Single Upload 1`] = `
Array [
  <div
    className="relative space-y-2"
  >
    <label
      className="inline-block uppercase text-bold-body-300"
      data-testid="txt"
      htmlFor=":rj:"
    >
      Input Label 
    </label>
    <p
      className="text-light-body-300 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Input description",
        }
      }
      data-testid="txt"
      id=":rj:-description"
    />
    <input
      accept="image/png, image/jpeg"
      hidden={true}
      id=":rj:"
      onChange={[Function]}
      type="file"
    />
    <div
      className="relative flex h-[129px] w-full items-center justify-center rounded-lg cursor-pointer border-light"
      onClick={[Function]}
    >
      <div
        className="flex items-center"
      >
        <div
          style={
            Object {
              "height": 19,
              "width": 30,
            }
          }
        />
        <p
          className="ml-3 text-heading-400"
          data-testid="txt"
        >
          Upload File (File formats: PNG, JPEG)
        </p>
      </div>
    </div>
  </div>,
  <div
    className="mt-8 flex flex-col items-center justify-center gap-8"
  />,
]
`;
